undo redo mis en place, reorganisation de la logique d'application de move